--- a/index.html
+++ b/index.html
@@ -1,50 +1,47 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Image Slider With Next And Previous Buttons</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  </head>
-  <body>
-    <div class="slider">
-      <div class="slide active">
-        <img src="img-1.jpg" alt="">
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>jQuery Image Slider</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <div class="slider-container">
+    <div class="mask">
+      <ul class="images">
+         <li>
+            <img src="images/img-1.jpg" />
+         </li>
+         <li>
+            <img src="images/img-2.jpg" />
+         </li>
+          <li>
+            <img src="images/img-3.jpg" />
+         </li>
+         <li>
+            <img src="images/img-4.jpg" />
+         </li>
+         <li>
+            <img src="images/img-5.jpg" />
+         </li>
+      </ul>
       </div>
-      <div class="slide">
-        <img src="img-2.jpg" alt="">
-      </div>
-      <div class="slide">
-        <img src="img-3.jpg" alt="">
-      </div>
-      <div class="slide">
-        <img src="img-4.jpg" alt="">
-      </div>
-      <div class="navigation">
-        <i class="fas fa-chevron-left prev-btn"></i>
-        <i class="fas fa-chevron-right next-btn"></i>
-      </div>
-      <div class="navigation-visibility">
-        <div class="slide-icon active"></div>
-        <div class="slide-icon"></div>
-        <div class="slide-icon"></div>
-        <div class="slide-icon"></div>
-      </div>
-    </div>
-  
-	<button type="button" id="pause"><i class="fa fa-pause-circle"></i> Stop autoplay</button>
-	<button type="button" id="start"><i class="fa fa-play-circle"></i> Start autoplay</button>
-
-  <div class="navigation-btn">
-    <div class="btn active"></div>
-    <div class="btn"></div>
-    <div class="btn"></div>
-    <div class="btn"></div>
-    <div class="btn"></div>
+      
+      <ul class="triggers">
+         <li></li>
+         <li></li>
+         <li></li>
+         <li></li>
+         <li></li>
+      </ul>
+      <span class="control prev"><button type="button"><i class="fa fa-arrow-left"></i></button></span>
+      <span class="control next"><button type="button"><i class="fa fa-arrow-right"></i></button></span>
   </div>
 
-	<script src="js/script.js"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>  
+    <script src="js/script.js" type="text/javascript"></script>  
+</body>
 </html>
-      
