--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>jQuery Image Slider</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
   <link rel="stylesheet" href="css/style.css">
+  <!-- Manifest -->
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <div class="slider-container">
@@ -41,7 +43,38 @@
       <span class="control next"><button type="button"><i class="fa fa-arrow-right"></i></button></span>
   </div>
 
+
+
+
+
+
+
+
+  <p id="requireHTTPS" class="hidden">
+   <b>STOP!</b> This page <b>must</b> be served over HTTPS.
+   Please <a>reload this page via HTTPS</a>.
+ </p>
+ 
+ <p>
+   Make me installable, follow the 
+   <a href="https://web.dev/codelab-make-installable/">instructions</a> here.
+ </p>
+ 
+ <!-- Install button, hidden by default -->
+ <div id="installContainer" class="hidden">
+   <button id="butInstall" type="button">
+     Install
+   </button>
+ </div>
+
+
+
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>  
-    <script src="js/script.js" type="text/javascript"></script>  
+    <script src="js/script.js" type="text/javascript"></script> 
+    <script src="script.js" type="text/javascript"></script>  
 </body>
 </html>
